<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:layout_weight="8"
    tools:context="com.acadgild.user.creditcardapplicationui.MainActivity">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_card_balance"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/card_balance"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_card_balance"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:inputType="number|numberDecimal"
             android:focusable="true"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        >
        <TextView
            android:id="@+id/tv_interest_rate"
            android:layout_width="220dp"
            android:textSize="17dp"
            android:layout_height="wrap_content"
            android:text="@string/yr_intrest_rate"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_interest_rate"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:inputType="number|numberDecimal"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv3"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/min_payment"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_min_payment"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:inputType="number|numberDecimal"
            android:background="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv4"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/card_bal"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_final_card_bal"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:background="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        >
        <TextView
            android:id="@+id/tv5"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/months_remaining"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_months_remaining"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:background="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        >
        <TextView
            android:id="@+id/tv6"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/interest_paid_will"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_interest_paid"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:background="@android:color/white" />
    </LinearLayout>
    <Button
        android:layout_weight="1"
        android:id="@+id/b_compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>
    <Button
        android:id="@+id/b_clear"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>
</LinearLayout>
